fix overflow issue in kanban headers taigaio/taiga-front#1305

--- a/app/styles/modules/kanban/kanban-table.scss
+++ b/app/styles/modules/kanban/kanban-table.scss
@@ -68,7 +68,7 @@ $column-padding: .5rem 1rem;
     position: relative;
     .kanban-table-inner {
         display: flex;
-        overflow: hidden;
+        overflow: visible;
         position: absolute;
         width: 100%;
     }
